--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: >
 lang: en-US
 
 baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
-git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
+url: https://JakeConway.github.io/jekyll-doc-theme # the base hostname & protocol for your site
+git_address: https://github.com/JakeConway/jekyll-doc-theme
+git_edit_address: https://github.com/JakeConway/jekyll-doc-theme/blob/gh-pages
 
 # theme options from https://bootswatch.com/3/
 # comment out this to use default Bootstrap
