--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   providing documentation and blog post pages.
 lang: en-US
 
-baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
+baseurl: "/" # the subpath of your site, e.g. /blog/
 url: https://JakeConway.github.io # the base hostname & protocol for your site
 git_address: https://github.com/JakeConway
 git_edit_address: https://github.com/JakeConway/blob/gh-pages
