--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Jekyll Doc Theme
+title: Jake Conway
 email: your-email@domain.com
 description: >
   Jekyll Template for Project Websites
